src/objects/Goal__c.object
<CustomObject>
    <fields>
        <fullName>Goal_Name__c</fullName>
        <label>Goal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Status__c</fullName>
        <label>Goal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intervention__c</fullName>
        <label>Intervention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Status2__c</fullName>
        <formula>IF(ISPICKVAL(Outcome__c,&quot;On Track&quot;), IMAGE(&quot;/resource/1449817708000/right&quot;,&quot;right&quot;,25,25),(IF(ISPICKVAL(Outcome__c,&quot;Off Track&quot;),IMAGE(&quot;/resource/1449817685000/wrong&quot;,&quot;wrong&quot;,25,25),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>On Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Goal__c</columns>
        <columns>Goal_Status__c</columns>
        <columns>Intervention__c</columns>
        <columns>Outcome_Status2__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>